Fix alignment of XY header for probe points in the settings view (again)

--- a/src/octoprint_bed_leveling/static/less/settings.less
+++ b/src/octoprint_bed_leveling/static/less/settings.less
@@ -5,7 +5,7 @@
 
   .controls .header-span {
     float:left;
-    width:120px;
+    width:110px;
     min-height: 30px;
   }
 }
